[gd_scene load_steps=3 format=3 uid="uid://ra28ouxhlclm"]

[ext_resource type="Theme" uid="uid://cb2tqos08yhkd" path="res://interface/theme/MinimalUI/MinimalUI.tres" id="1_d6fbj"]
[ext_resource type="Script" path="res://interface/menus/main/settings/api_tab.gd" id="2_gnd0h"]

[node name="API" type="TabBar"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../Audio")
focus_neighbor_right = NodePath("../Video")
theme = ExtResource("1_d6fbj")
theme_override_font_sizes/font_size = 20
script = ExtResource("2_gnd0h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -44.0
offset_right = 135.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HFlowContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OpenAIKey" type="Label" parent="VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "OpenAI Key"

[node name="OpenAIKeyInput" type="LineEdit" parent="VBoxContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "sk-..."

[node name="TTSEnabledButton" type="CheckButton" parent="VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_d6fbj")
theme_override_font_sizes/font_size = 22
text = "Text To Speech"
clip_text = true

[node name="ElevenLabsField" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="ElevenLabsKey" type="Label" parent="VBoxContainer/ElevenLabsField"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "ElevenLabs Key"

[node name="ElevenLabsKeyInput" type="LineEdit" parent="VBoxContainer/ElevenLabsField"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "..."

[connection signal="text_changed" from="VBoxContainer/HFlowContainer/OpenAIKeyInput" to="." method="_on_open_ai_key_input_text_changed"]
[connection signal="toggled" from="VBoxContainer/TTSEnabledButton" to="." method="_on_check_button_toggled"]
[connection signal="text_changed" from="VBoxContainer/ElevenLabsField/ElevenLabsKeyInput" to="." method="_on_eleven_labs_key_input_text_changed"]
